--- a/PaylasimKuresi/Views/Shared/Components/_PostFlow/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_PostFlow/Default.cshtml
@@ -1,134 +1,140 @@
+@model List<GetPostDto>
+
 <div class="posts-section mb-5">
-    <div class="post border-bottom p-3 bg-white w-shadow">
-        <div class="media text-muted pt-3">
-            <img src="/template/assets/images/users/user-1.jpg" alt="Online user" class="mr-3 post-user-image">
-            <div class="media-body pb-3 mb-0 small lh-125">
-                <div class="d-flex justify-content-between align-items-center w-100">
-                    <a href="#" class="text-gray-dark post-user-name">John Michael</a>
-                    <div class="dropdown">
-                        <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions"
-                            aria-haspopup="true" aria-expanded="false">
-                            <i class='bx bx-dots-horizontal-rounded'></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left post-dropdown-menu">
-                            <a href="#" class="dropdown-item" aria-describedby="savePost">
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <i class='bx bx-bookmark-plus post-option-icon'></i>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <span class="fs-9">Save post</span>
-                                        <small id="savePost" class="form-text text-muted">Add this to your saved
-                                            items</small>
-                                    </div>
-                                </div>
+    @foreach (var item in Model)
+    {
+        <div class="post border-bottom p-3 bg-white w-shadow rounded mt-3">
+            <div class="media text-muted pt-3">
+                <img src="/template/assets/images/users/user-1.jpg" alt="Online user" class="mr-3 post-user-image">
+                <div class="media-body pb-3 mb-0 small lh-125">
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <a href="#" class="text-gray-dark post-user-name">John Michael</a>
+                        <div class="dropdown">
+                            <a href="#" class="post-more-settings" role="button" data-toggle="dropdown" id="postOptions"
+                                aria-haspopup="true" aria-expanded="false">
+                                <i class='bx bx-dots-horizontal-rounded'></i>
                             </a>
-                            <a href="#" class="dropdown-item" aria-describedby="hidePost">
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <i class='bx bx-hide post-option-icon'></i>
+                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left post-dropdown-menu">
+                                <a href="#" class="dropdown-item" aria-describedby="savePost">
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <i class='bx bx-bookmark-plus post-option-icon'></i>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <span class="fs-9">Gönderiyi kaydet</span>
+                                            <small id="savePost" class="form-text text-muted">Bunu kayıtlı öğelerinize ekleyin</small>
+                                        </div>
                                     </div>
-                                    <div class="col-md-10">
-                                        <span class="fs-9">Hide post</span>
-                                        <small id="hidePost" class="form-text text-muted">See fewer posts like
-                                            this</small>
+                                </a>
+                                <a href="#" class="dropdown-item" aria-describedby="hidePost">
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <i class='bx bx-hide post-option-icon'></i>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <span class="fs-9">Gönderiyi gizle</span>
+                                            <small id="hidePost" class="form-text text-muted">Bunun gibi daha az gönderi görün</small>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                            <a href="#" class="dropdown-item" aria-describedby="snoozePost">
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <i class='bx bx-time post-option-icon'></i>
+                                </a>
+                                <a href="#" class="dropdown-item" aria-describedby="snoozePost">
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <i class='bx bx-time post-option-icon'></i>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <span class="fs-9">Linayı 30 gün boyunca ertele</span>
+                                            <small id="snoozePost" class="form-text text-muted">Gönderileri görmeyi geçici olarak durdur</small>
+                                        </div>
                                     </div>
-                                    <div class="col-md-10">
-                                        <span class="fs-9">Snooze Lina for 30 days</span>
-                                        <small id="snoozePost" class="form-text text-muted">Temporarily stop seeing
-                                            posts</small>
+                                </a>
+                                <a href="#" class="dropdown-item" aria-describedby="reportPost">
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <i class='bx bx-block post-option-icon'></i>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <span class="fs-9">Şikayet et</span>
+                                            <small id="reportPost" class="form-text text-muted">Bu gönderi hakkında endişeliyim</small>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                            <a href="#" class="dropdown-item" aria-describedby="reportPost">
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <i class='bx bx-block post-option-icon'></i>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <span class="fs-9">Report</span>
-                                        <small id="reportPost" class="form-text text-muted">I'm concerned about this
-                                            post</small>
-                                    </div>
-                                </div>
-                            </a>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <span class="d-block">3 hours ago <i class='bx bx-globe ml-3'></i></span>
-            </div>
-        </div>
-        <div class="mt-3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis voluptatem veritatis harum, tenetur,
-                quibusdam voluptatum, incidunt saepe minus maiores ea atque sequi illo veniam sint quaerat corporis
-                totam et. Culpa?</p>
-        </div>
-        <div class="d-block mt-3">
-            <img src="https://scontent.fevn1-2.fna.fbcdn.net/v/t1.0-9/56161887_588993861570433_2896723195090436096_n.jpg?_nc_cat=103&_nc_eui2=AeFI0UuTq3uUF_TLEbnZwM-qSRtgOu0HE2JPwW6b4hIki73-2OWYhc7L1MPsYl9cYy-w122CCak-Fxj0TE1a-kjsd-KXzh5QsuvxbW_mg9qqtg&_nc_ht=scontent.fevn1-2.fna&oh=ea44bffa38f368f98f0553c5cef8e455&oe=5D050B05"
-                class="post-content" alt="post image">
-        </div>
-        <div class="mb-3">
-            <!-- Reactions -->
-            <div class="argon-reaction">
-                <span class="like-btn">
-                    <a href="#" class="post-card-buttons" id="reactions"><i class='bx bxs-like mr-2'></i> 67</a>
-                    <ul class="reactions-box dropdown-shadow">
-                        <li class="reaction reaction-like" data-reaction="Like"></li>
-                        <li class="reaction reaction-love" data-reaction="Love"></li>
-                        <li class="reaction reaction-haha" data-reaction="HaHa"></li>
-                        <li class="reaction reaction-wow" data-reaction="Wow"></li>
-                        <li class="reaction reaction-sad" data-reaction="Sad"></li>
-                        <li class="reaction reaction-angry" data-reaction="Angry"></li>
-                    </ul>
-                </span>
-            </div>
-            <a href="javascript:void(0)" class="post-card-buttons" id="show-comments"><i
-                    class='bx bx-message-rounded mr-2'></i> 5</a>
-            <div class="dropdown dropup share-dropup">
-                <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class='bx bx-share-alt mr-2'></i> Paylaş
-                </a>
-                <div class="dropdown-menu post-dropdown-menu">
-                    <a href="#" class="dropdown-item">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <i class='bx bx-share-alt'></i>
-                            </div>
-                            <div class="col-md-10">
-                                <span>Şimdi Paylaş (Herkese açık)</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#" class="dropdown-item">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <i class='bx bx-share-alt'></i>
-                            </div>
-                            <div class="col-md-10">
-                                <span>Paylaş...</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#" class="dropdown-item">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <i class='bx bx-message'></i>
-                            </div>
-                            <div class="col-md-10">
-                                <span>Mesaj olarak gönder</span>
-                            </div>
-                        </div>
-                    </a>
+                    <span class="d-block">@item.CreatedAt.ToShortDateString()<i class='bx bx-globe ml-3'></i></span>
                 </div>
             </div>
+            @{
+                if (item.TextPost != null)
+                {
+                    <div class="mt-3">
+                        <p>@item.TextPost.Content</p>
+                    </div>
+                }
+                if (item.ImagePost != null)
+                {
+                    <div class="d-block mt-3">
+                        <img src=@item.ImagePost.Url class="post-content" alt="post image" hidden="">
+                    </div>
+                }
+            }
+            <div class="mb-3">
+                <!-- Reactions -->
+                <div class="argon-reaction">
+                    <span class="like-btn">
+                        <a href="#" class="post-card-buttons" id="reactions"><i class='bx bxs-like mr-2'></i> 67</a>
+                        <ul class="reactions-box dropdown-shadow">
+                            <li class="reaction reaction-like" data-reaction="Like"></li>
+                            <li class="reaction reaction-love" data-reaction="Love"></li>
+                            <li class="reaction reaction-haha" data-reaction="HaHa"></li>
+                            <li class="reaction reaction-wow" data-reaction="Wow"></li>
+                            <li class="reaction reaction-sad" data-reaction="Sad"></li>
+                            <li class="reaction reaction-angry" data-reaction="Angry"></li>
+                        </ul>
+                    </span>
+                </div>
+                <a href="javascript:void(0)" class="post-card-buttons" id="show-comments"><i
+                        class='bx bx-message-rounded mr-2'></i> 5</a>
+                <div class="dropdown dropup share-dropup">
+                    <a href="#" class="post-card-buttons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class='bx bx-share-alt mr-2'></i> Paylaş
+                    </a>
+                    <div class="dropdown-menu post-dropdown-menu">
+                        <a href="#" class="dropdown-item">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <i class='bx bx-share-alt'></i>
+                                </div>
+                                <div class="col-md-10">
+                                    <span>Şimdi Paylaş (Herkese açık)</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="dropdown-item">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <i class='bx bx-share-alt'></i>
+                                </div>
+                                <div class="col-md-10">
+                                    <span>Paylaş...</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" class="dropdown-item">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <i class='bx bx-message'></i>
+                                </div>
+                                <div class="col-md-10">
+                                    <span>Mesaj olarak gönder</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            @await Component.InvokeAsync("_CommentSection")
         </div>
-        @await Component.InvokeAsync("_CommentSection")
-    </div>
+    }
 </div>
