Implemented: Send Post functionality.

--- a/PaylasimKuresi/Views/Shared/Components/_PostComposerBox/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_PostComposerBox/Default.cshtml
@@ -4,7 +4,7 @@
             @using (Html.BeginForm("Index", "Home", FormMethod.Post))
             {
                 <div class="form-group post-input">
-                    <textarea class="form-control" id="postForm" rows="2" placeholder="Ne düşünüyorsun..."></textarea>
+                    <textarea class="form-control" id="postForm" name="Content" rows="2" placeholder="Ne düşünüyorsun..."></textarea>
                 </div>
                 <div class="row post-form-group">
                     <div class="col-md-9">
