--- a/PaylasimKuresi/Views/_ViewImports.cshtml
+++ b/PaylasimKuresi/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using PaylasimKuresi
 @using PaylasimKuresi.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Models.DTOs.PostDTOs
+@using Models.DTOs.UserDTOs
