--- a/PaylasimKuresi/Views/_ViewImports.cshtml
+++ b/PaylasimKuresi/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Models.DTOs.PostDTOs
 @using Models.DTOs.UserDTOs
+@using Models.DTOs.DmDTOs
